agregando la tarea de Wilder

--- a/index.html
+++ b/index.html
@@ -48,5 +48,16 @@
         <div class="hijo"></div>
         <div class="hijo"></div>
      </div>
+
+<h2 class="tareas">Tareas</h2>
+
+     <div class="padre3">
+        <div class="hijo"></div>
+        <div class="hijo"></div>
+        <div class="hijo"></div>
+        
+     </div>
+
+     
 </body>
 </html>
