agregando la tarea de Yuri

--- a/index.html
+++ b/index.html
@@ -50,12 +50,18 @@
      </div>
 
 <h2 class="tareas">Tareas</h2>
-
+     <h3> Wilder</h3>
      <div class="padre3">
         <div class="hijo"></div>
         <div class="hijo"></div>
         <div class="hijo"></div>
-        
+     </div>
+
+     <h3> Yuri</h3>
+     <div class="padre4">
+        <div class="hijo"></div>
+        <div class="hijo"></div>
+        <div class="hijo"></div>
      </div>
 
      
