agregando la tarea de Roger

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
         <div class="hijo"></div>
      </div>
 
+     <h3> Roger</h3>
+     <div class="padre6">
+        <div class="hijo"></div>
+        <div class="hijo"></div>
+        <div class="hijo"></div>
+     </div>
+
      
 </body>
 </html>
